# VectorDefense-Core

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main_build.yml
src/: CMakeLists.txt  main.cpp
